Other than a nav spacing bug, everything is done

--- a/project01/lifefo.css
+++ b/project01/lifefo.css
@@ -12,11 +12,16 @@ header {
 footer {
     background: #f0f0f0;
     text-align: center;
+    padding: 0.625em;
+    font-size: 0.75em;
 }
 
 nav {
+    margin: auto;
     background: #000000;
     color: #ffffff;
+    padding 0.625em;
+    font-weight: bold;
 }
 
 #container {
@@ -27,17 +32,54 @@ nav {
     border: 1px solid black;
 }
 
+header h1 {
+    padding: 0;
+    letter-spacing: -2px;
+}
+
+header p {
+    color: #66666f;
+    font-size: 0.75em;  /* 12px / 16px = 0.75em */
+}
+
+nav ul {
+    display: inline-block;
+    list-style: none;
+    margin: auto;
+}
+
+nav li {
+    display: inline-block;
+    padding: 0.625em;
+}
+
+nav a {
+    color: #ffffff;
+    text-decoration: none;
+    padding: 0.625em;
+}
+
+nav a:hover {
+    color: #000000;
+    background: #ffffff;
+}
+
+h1, h2, h3 {
+    font-weight: bold;
+}
+
 label {
     display: inline-block;
     width: 12.5em;      /* 200px / 16px = 12.5em */
 }
 
-li {
-    list-style: none;
+.main h2 {
+    margin-bottom: 0.625em; /* 26px / 16px = 1.625em */
 }
 
-nav li {
-    display: inline;
+.main li {
+    list-style: none;
+    margin-bottom: 1.25em;  /* 20px / 16px = 1.25em */
 }
 
 .content {
@@ -48,4 +90,13 @@ nav li {
     float: right;
     background: #f0f0ff;
     width: 21.25em;    /* 640px / 16px = 0.3541em */
+    padding: 0.375em;   /* 6px / 16px = 0.375em */
+}
+
+.progress h3 {
+    margin-bottom: 0.375em; /* 22px / 16px = 1.375em */
+}
+
+.progress p {
+    margin-bottom: 1.1875em; /* 19px / 16px = 1.1875em */
 }
